--- a/register/dummy/templates/home.html
+++ b/register/dummy/templates/home.html
@@ -4,6 +4,7 @@
 
  {% block title %}Home{% endblock %}
 
+
  {% block content %}
  {% if user.is_authenticated %}
    Hi {{ user.username }}!
@@ -11,5 +12,12 @@
  {% else %}
    <p>You are not logged in</p>
    <a href="{% url 'login' %}">Log In</a>
+   <hr>
+   <a href="{% url 'login' %}">Members Log In</a>
  {% endif %}
  {% endblock %}
+
+
+
+
+ 
